# EyeFlowPython

./: .gitignore  .pre-commit-config.yaml  AngioEye.spec  EyeFlow.spec  README.md  THIRD_PARTY_NOTICES  default_settings.json  pyproject.toml
Viewer/: viewer.py
hooks/: hook-pipelines.py  hook-postprocess.py
installer/: AngioEye.iss  EyeFlow.iss
scripts/: write_beat_period_seconds.py
src/: angio_eye.py  app_settings.py  cli.py  dependency_utils.py  eye_flow.py  launcher.py  runtime_limits.py
src/calculations/: __init__.py  _shared.py
src/calculations/bloodflow_velocity/: __init__.py  per_beat_analysis.py  per_beat_signal_analysis.py
src/calculations/cross_section/: __init__.py  cross_section_waveform_metrics.py
src/domain/: __init__.py
src/domain/blood_flow_velocity/: __init__.py  _signal_utils.py  per_beat.py  per_beat_signal.py
src/domain/steps/: __init__.py  _masks.py  arterial_waveform_analysis.py  base.py  vessel_velocity_estimator.py
src/eyeflow/: __main__.py  errors.py
src/eyeflow/analysis/: __init__.py
src/eyeflow/exports/: __init__.py
src/eyeflow/gui/: app.py  launcher.py  metrics_catalog.py
src/eyeflow/io/: __init__.py  h5.py
src/eyeflow/preprocessing/: __init__.py
src/eyeflow/validation/: h5_contract.py
src/eyeflowpython/: __init__.py  __main__.py  processing.py
src/eyeflowpython/cli/: __init__.py  main.py
src/eyeflowpython/ui/: __init__.py  main.py
src/input_output/: __init__.py  inputs.py  output_manager.py
src/input_output/archives/: zip_archive.py
src/input_output/hdf5/: __init__.py  core.py
src/input_output/schema/: __init__.py  base.py  doppler_view.py  eyeflow_output.py  holo_input.py  holodoppler.py
src/pipelines/: Windkessel_RC.py  __init__.py  dual_input_tutorial.py  lowrank_pulsatility_metrics.py  modal_analysis.py  script_eyeflow.py  waveform_harmonic_organization.py  waveform_harmonic_organization_SVD.py  waveform_shape_metrics.py
src/pipelines/core/: __init__.py  base.py  errors.py  utils.py
src/pipelines/utils/: __init__.py  input_access.py
src/postprocess/: __init__.py
src/postprocess/core/: __init__.py  base.py  groups_comparison_dashboard.py  groups_comparison_html.py  stats_groups_comparison.py  variability_heterogeneity_dashboard.py
src/scripts/: build_installer.py  gen_optional_reqs.py  ruff_linter.py
src/utils/io/: __init__.py  archive_io.py  hdf5.py  hdf5_schema.py  hdf5_sources.py  holo_inputs.py  output_writer.py
src/utils/io/archives/: __init__.py
src/utils/io/hdf5/: core.py
src/utils/io/resolvers/: __init__.py  holo_inputs.py
src/utils/io/schema/: __init__.py  eyeflow_output.py  holo_input.py
src/utils/io/sources/: __init__.py  pipeline_input.py
test/: test_angio_eye.py  test_app_settings.py  test_dependency_utils.py  test_dual_input_tutorial.py  test_eye_flow.py  test_groups_comparison_dashboard.py  test_hdf5_io.py  test_launcher.py  test_postprocess_tutorial.py
