[project]
name = "eyeflowpython"
version = "0.1.0"
description = "Minimal uv-managed Python project scaffold for EyeFlowPython."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.14.0",
    "numpy>=2.0.0",
    "sv-ttk>=2.6.1",
]

[project.scripts]
eyeflowpython = "eyeflowpython.cli.main:main"
eyeflowpython-ui = "eyeflowpython.ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/eyeflowpython"]

[tool.uv]
package = true
